feat: add lastest docs

--- a/src/content/docs/development/frontend/google-analytics.mdx
+++ b/src/content/docs/development/frontend/google-analytics.mdx
@@ -4,7 +4,7 @@ title: Agregar Google Analytics al proyecto
 
 import { Aside } from '@astrojs/starlight/components';
 
-<Aside>Este paso debe ser el primero que se realice dentro del proyecto</Aside>
+<Aside>Este paso debe ser el primero que se realice una vez iniciado el proyecto.</Aside>
 
 Agregar Google Analytics a tu proyecto es un paso importante para poder rastrear y analizar el tráfico de tu sitio web. A continuación, se detallan los pasos necesarios para integrar Google Analytics en los proyectos.
 
